<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gutta.apievolution</groupId>
    <artifactId>gutta-apievolution</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <antlr.version>4.13.1</antlr.version>
        <junit.version>5.8.1</junit.version>
        <jmh.version>1.36</jmh.version>

        <checkstyle.version>9.2</checkstyle.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Run CheckStyle -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <configLocation>checkstyle.xml</configLocation>
                    </configuration>
                    <executions>
                        <execution>
                            <id>checkstyle</id>
                            <phase>package</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${checkstyle.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <!-- ANTLR parser generator -->
                <plugin>
                    <groupId>org.antlr</groupId>
                    <artifactId>antlr4-maven-plugin</artifactId>
                    <version>${antlr.version}</version>
                </plugin>
                <!-- Recent compiler plugin with parameter metadata -->
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                	<artifactId>maven-plugin-plugin</artifactId>
                    <version>3.15.1</version>
                </plugin>

                <!-- Recent Surefire plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
				<!-- Code Formatter plugin -->
				<plugin>
  					<groupId>net.revelc.code.formatter</groupId>
  					<artifactId>formatter-maven-plugin</artifactId>
  					<version>2.18.0</version>
					<configuration>
						<configFile>${project.basedir}/../eclipse-formatter.xml</configFile>
					</configuration>		
				</plugin>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                	<groupId>org.eclipse.m2e</groupId>
                	<artifactId>lifecycle-mapping</artifactId>
                	<version>1.0.0</version>
                	<configuration>
                		<lifecycleMappingMetadata>
                			<pluginExecutions>
                			</pluginExecutions>
                		</lifecycleMappingMetadata>
                	</configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Project-internal dependencies -->
            <dependency>
                <groupId>gutta.apievolution</groupId>
                <artifactId>gutta-apievolution-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gutta.apievolution</groupId>
                <artifactId>gutta-apievolution-dsl</artifactId>
                <version>${project.version}</version>
            </dependency>
			<dependency>
                <groupId>gutta.apievolution</groupId>
                <artifactId>gutta-apievolution-fixedformat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>gutta.apievolution</groupId>
                <artifactId>gutta-apievolution-json</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
				<groupId>gutta.apievolution</groupId>
				<artifactId>gutta-apievolution-inprocess</artifactId>
				<version>${project.version}</version>			
			</dependency>
			<dependency>
				<groupId>gutta.apievolution</groupId>
				<artifactId>gutta-apievolution-customerexample</artifactId>
				<version>${project.version}</version>			
			</dependency>

            <!-- Third-party dependencies -->
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>${antlr.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>31.0.1-jre</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>4.3.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>gutta-apievolution-core</module>
        <module>gutta-apievolution-dsl</module>
        <module>gutta-apievolution-java-codegen-plugin</module>
        <module>gutta-apievolution-json</module>
        <module>gutta-apievolution-repository</module>
        <module>gutta-apievolution-fixedformat</module>
        <module>gutta-apievolution-jmh</module>
        <module>gutta-apievolution-inprocess</module>
        <module>gutta-apievolution-customerexample</module>
        <module>gutta-apievolution-tools</module>
    </modules>

</project>